    need of getting a weak reference to "DBCursor" objects, since now it is
    problematic if Python < 3.9.

  * Wai Keen Woon sent some weeks ago a patch to solve a problem with
    "DB.verify()" always succeeding. Refactoring in that area in 18.1.0 made
    that patch unneeded, but I added the test case provided to the test suite.

18.1.0 - 2020-11-12:

  * "bsddb" name is reserved in PYPI, so we rename the project to "berkeleydb".

18.1.0-pre:
  * Support Oracle Berkeley DB 18.1.x.
  * Drop support for Oracle Berkeley DB 4.7, 5.1 and 6.1.
  * Drop support for Python 2.6, 2.7, 3.3, 3.4 and 3.5.
  * The library name is migrated from "bsddb3" to "bsddb". Reasons:
    - In the old days, "bsddb" module was integrated with Python < 3 . The
      release rate of new Python interpreters was slow, so "bsddb" was
      also distributed as an external package for faster deployment of
      improvements and support of new Oracle Berkeley DB releases. In order to
      be able to install a new version of this package without conflicting
      with the internal python "bsddb", a new package name was required.
      At the time, the chosen name was "bsddb3" because it was the major
      release version of the supported Oracle Berkeley DB library.

      After Oracle released Berkeley DB major versions 4, 5, 6 and 18, "bsddb3"
      name was retained for compatibility, although it didn't make sense
      anymore.

    - "bsddb3" seems to refer to the Python 3 version of "bsddb". This
      was never the case, and that was confusing. Even more now that
      legacy "bsddb3" is the Python 2/3 codebase and the new "bsddb" is
      Python 3 only.

    - Since from now on this library is Python 3 only, I would hate that
      Python 2 users upgrading their Berkeley DB libraries would render
      their installation unable to run. In order to avoid that, a new name
      for the package is a good idea.

    - I decided to go back to "bsddb", since Python 2.7 is/should be dead.
